--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -49222,5 +49222,117 @@
         "published": "Sat, 10 Jan 2026 00:30:53 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"SoftBank Sells Another 2.15% Stake In Ola Electric\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/ola-electric-softbank-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Japanese tech investor SoftBank Group sold 9.46 Cr shares, or 2.15% stake, in electric vehicle (EV) maker Ola Electric via&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/09/i-met-a-lot-of-weird-robots-at-ces-here-are-the-most-memorable/",
+        "title": "I met a lot of weird robots at CES \u2014 here are the most memorable",
+        "link": "https://techcrunch.com/2026/01/09/i-met-a-lot-of-weird-robots-at-ces-here-are-the-most-memorable/",
+        "published": "Sat, 10 Jan 2026 01:09:25 +0000",
+        "source": "TechCrunch",
+        "summary": "If the robots don't always give a totally accurate representation of where commercial deployment is at the moment, they do give visitors a peek at where their parent companies might be headed."
+    },
+    {
+        "id": "https://www.theverge.com/news/860106/betterment-crypto-scam-notification",
+        "title": "Betterment&#8217;s financial app sends customers a $10,000 crypto scam message",
+        "link": "https://www.theverge.com/news/860106/betterment-crypto-scam-notification",
+        "published": "2026-01-09T20:14:20-05:00",
+        "source": "The Verge",
+        "summary": "Betterment, a financial app, sent a sketchy-looking notification on Friday asking users to send $10,000 to Bitcoin and Ethereum crypto wallets and promising to \"triple your crypto,\" according to a thread on Reddit. The Betterment account says in an X thread that this was an \"unauthorized message\" that was sent via a \"third-party system.\" Here's [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/openai-contractor-upload-real-work-documents-ai-agents/",
+        "title": "OpenAI Is Asking Contractors to Upload Work From Past Jobs to Evaluate the Performance of AI Agents",
+        "link": "https://www.wired.com/story/openai-contractor-upload-real-work-documents-ai-agents/",
+        "published": "Sat, 10 Jan 2026 01:11:25 +0000",
+        "source": "WIRED",
+        "summary": "To prepare AI agents for office work, the company is asking contractors to upload projects from past jobs, leaving it to them to strip out confidential and personally identifiable information."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2026/01/spacex-gets-fcc-permission-to-launch-another-7500-starlink-satellites/",
+        "title": "SpaceX gets FCC permission to launch another 7,500 Starlink satellites",
+        "link": "https://arstechnica.com/tech-policy/2026/01/spacex-gets-fcc-permission-to-launch-another-7500-starlink-satellites/",
+        "published": "Sat, 10 Jan 2026 00:52:21 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Including previous approvals, Starlink can now deploy 15,000 Gen2 satellites."
+    },
+    {
+        "id": "https://arstechnica.com/space/2026/01/esa-considers-righting-the-wrongs-of-ariane-6-by-turning-it-into-a-franken-rocket/",
+        "title": "ESA considers righting the wrongs of Ariane 6 by turning it into a Franken-rocket",
+        "link": "https://arstechnica.com/space/2026/01/esa-considers-righting-the-wrongs-of-ariane-6-by-turning-it-into-a-franken-rocket/",
+        "published": "Sat, 10 Jan 2026 00:06:30 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "ArianeGroup is still trying to catch up to where the bleeding edge of the launch industry was 15 years ago."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/fcc-approves-spacex-plan-to-deploy-an-additional-7500-starlink-satellites/articleshow/126446483.cms",
+        "title": "FCC approves SpaceX plan to deploy an additional 7,500 Starlink satellites",
+        "link": "https://economictimes.indiatimes.com/tech/technology/fcc-approves-spacex-plan-to-deploy-an-additional-7500-starlink-satellites/articleshow/126446483.cms",
+        "published": "Sat, 10 Jan 2026 07:59:09 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The agency said the additional satellites will provide direct-to-cell connectivity outside the United States and supplemental U.S. coverage, which will allow for next-generation mobile services as well as internet speeds of up to 1 gigabit per second."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/chinese-ai-unicorn-minimax-soars-109-percent-in-hong-kong-debut/articleshow/126446434.cms",
+        "title": "Chinese AI unicorn MiniMax soars 109 percent in Hong Kong debut",
+        "link": "https://economictimes.indiatimes.com/tech/technology/chinese-ai-unicorn-minimax-soars-109-percent-in-hong-kong-debut/articleshow/126446434.cms",
+        "published": "Sat, 10 Jan 2026 07:47:46 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Shares in Chinese AI startup MiniMax soared 109 percent as it went public in Hong Kong on Friday, raising US$619 million in a sign that strong investor demand is rewarding the country's rapidly developing sector. Friday's shares performance shows investors have a \"strong appetite for China's tech sector and the AI story\", Gary Ng, senior economist at Natixis Corporate and Investment Banking, told AFP. The whole AI sector is still at an early stage of development, which requires massive investmen"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/openai-softbank-invest-1-billion-in-stargate-partner-sb-energy/articleshow/126446327.cms",
+        "title": "OpenAI, SoftBank invest $1 billion in Stargate partner SB Energy",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/openai-softbank-invest-1-billion-in-stargate-partner-sb-energy/articleshow/126446327.cms",
+        "published": "Sat, 10 Jan 2026 07:28:33 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "OpenAI and SoftBank will each invest $500 million in SB Energy to support the energy firm\u2019s growth as a data center developer and operator, the companies said in a statement Friday. OpenAI also said it has selected SB Energy to build and operate its 1.2 gigawatt data center in Milam County, Texas. A single gigawatt is enough to power roughly 750,000 US homes at any given moment."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-comes-of-age-while-some-of-its-founders-are-yet-to/articleshow/126446200.cms",
+        "title": "AI comes of age while some of its founders are yet to",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-comes-of-age-while-some-of-its-founders-are-yet-to/articleshow/126446200.cms",
+        "published": "Sat, 10 Jan 2026 07:08:38 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The average age of newbies starting up is coming down to 20s with teens, native to disruptive tech, becoming part of conversation."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/ai-comes-of-age-while-some-of-its-founders-are-yet-to/articleshow/126446199.cms",
+        "title": "AI comes of age while some of its founders are yet to",
+        "link": "https://economictimes.indiatimes.com/tech/startups/ai-comes-of-age-while-some-of-its-founders-are-yet-to/articleshow/126446199.cms",
+        "published": "Sat, 10 Jan 2026 07:08:38 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The average age of newbies starting up is coming down to 20s with teens, native to disruptive tech, becoming part of the conversation."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/diligence-is-not-one-size-fits-all-tailoring-your-approach-by-sector",
+        "title": "Diligence is not one-size-fits-all: Tailoring your approach by sector",
+        "link": "https://yourstory.com/2026/01/diligence-is-not-one-size-fits-all-tailoring-your-approach-by-sector",
+        "published": "Sat, 10 Jan 2026 02:30:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "When diligence begins with a hypothesis, it turns analysis into discovery. It helps investors see beyond numbers to test whether performance is truly sustainable."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/tamil-nadu-unveils-deep-tech-startup-policy-with-rs-100-cr-push",
+        "title": "Tamil Nadu unveils Deep Tech Startup Policy with Rs 100 Cr push",
+        "link": "https://yourstory.com/2026/01/tamil-nadu-unveils-deep-tech-startup-policy-with-rs-100-cr-push",
+        "published": "Fri, 09 Jan 2026 08:58:48 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The key goals of the policy include a 25% increase in annual patent filings by deep tech startups, training of over 10,000 students and professionals in deep tech skills."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/gurugram-startup-instrucko-sustainable-edtech-business-kareena-kapoor-khan",
+        "title": "How Instrucko is building a sustainable edtech business, with praise from Kareena Kapoor Khan",
+        "link": "https://yourstory.com/2026/01/gurugram-startup-instrucko-sustainable-edtech-business-kareena-kapoor-khan",
+        "published": "Sat, 10 Jan 2026 01:30:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Founded by Devvaki Aggarwal in late 2020, Instrucko offers languages, communication, and life skills programmes, along with teacher training across private and government schools in India."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/eternal-and-its-gst-shortfalls",
+        "title": "Eternal and its GST shortfalls; Inside edtech startup Instrucko",
+        "link": "https://yourstory.com/2026/01/eternal-and-its-gst-shortfalls",
+        "published": "Sat, 10 Jan 2026 02:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Eternal, formerly known as Zomato, has received consecutive tax orders from West Bengal authorities demanding a total of approximately Rs 31.25 crore, inclusive of interest and penalties."
     }
 ]
